# msg-terminal

./: ..gitignore.un~  .Cargo.toml.un~  .gitignore  Cargo.toml  LICENSE  README.md  clang-format.sh  meson.build  rustfmt.toml
msg-terminal/src/: main.rs
src/: .main.rs.un~  main.rs  msg_terminal.hpp
src/assets/: Config.toml  config.toml  style.toml
src/config/: config.rs
src/configuration/: mod.rs  msg_configuration.rs
src/logger/: mod.rs
src/msg_config/: impl_config.rs  mod.rs
src/tui/: mod.rs  ui.rs
src/tui/component/: area.cpp  area_padding.cpp  border.cpp  input_keyboard.cpp  position.cpp  position_padding.cpp  size.cpp  size_padding.cpp  terminal_color.cpp  terminal_state.cpp  text_buffer.cpp  window_state.cpp
src/tui/entity/: text_box_entity.cpp
src/util/: .event.rs.un~  .mod.rs.un~
tests/: terminaui_test.rs
trash/: import_with_path.rs
