[package]
name = "msg-terminal"
version = "0.1.0"
edition = "2021"
authors = ["Nikita Karatsev (NotAPattern) <nikita.karatsev@gmail.com>"]
description = "Text user interface (TUI) client for some social network"
readme = "README.md"
repository = "https://github.com/NotAPattern/msg-terminal"
license-file = "LICENSE"
keywords = ["messenger", "tui", "terminal", "social network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cursive = "*"
serde = "*"
serde_derive = "*"
termion = "*"
toml="*"
#serde="*"
#msg_config = { path = "src/msg_config"}

[dependencies.cursive]
version = "0.17.0"
default-features = false
features = ["termion-backend", "toml"]

#[dependencies.config]
#path="../src/msg_config"
